--- a/interviews/templates/view_interview.html
+++ b/interviews/templates/view_interview.html
@@ -7,4 +7,4 @@
     {% endfor %}
 </ul>
 
-<a href="{% url 'add_question' interview.id %}">Add Question</a>
+{% comment %} <a href="{% url 'add_question' interview.id %}">Add Question</a> {% endcomment %}
