--- a/interviews/templates/view_question.html
+++ b/interviews/templates/view_question.html
@@ -7,6 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         body {
@@ -68,6 +69,7 @@
                     <th>Question Type</th>
                     <th>Answer</th>
                     <th>Date</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -79,6 +81,11 @@
                     <td>{{ question.question_type }}</td>
                     <td>{{ question.answer }}</td>
                     <td>{{ question.interview.date }}</td>
+                    <td style='font-size:24px'>
+
+                    <a class="fas fa-eye" href="{% url 'add_question_view' question.id %}" style='font-size:24px'></a>
+                    <span class="delete-icon" data-id="{{ question.id }}" onclick="deleteQuestion(this)" style="cursor: pointer;">🗑️</span>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -180,6 +187,41 @@
                 alert('Error adding the question.');
             });
         });
+
+        function deleteQuestion(element) {
+            const id = element.getAttribute('data-id'); // Get the ID from the data attribute
+            const apiUrl = `/add_question`; // Use ID in the URL (replace with your API)
+            const data = {
+               id:parseInt(id)
+            };
+    
+            if (confirm('Are you sure you want to delete this question?')) {
+                fetch(apiUrl, {
+                    method: 'DELETE', // Use DELETE method
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}'
+
+                    },
+                    body: JSON.stringify(data)
+
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Success:', data);
+                    // Optionally refresh the page or remove the row
+                    location.reload(); // Reload the page or update the UI accordingly
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+            }
+        }
     </script>
 </body>
 </html>
