--- a/interviews/templates/home.html
+++ b/interviews/templates/home.html
@@ -14,6 +14,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            background-color: #e9e7f0;;
         }
         .container {
             display: flex;
