--- a/interviews/templates/edit_interview.html
+++ b/interviews/templates/edit_interview.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-color: #f7f7f7;
+            background-color: #e9e7f0;
         }
         .container {
             margin-top: 50px;
@@ -18,7 +18,7 @@
             background-color: white;
             padding: 20px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            border-radius: 12px;
         }
         h1 {
             text-align: center;
@@ -40,6 +40,10 @@
         }
         .btn-edit:hover {
             background-color: #218838;
+        }
+        textarea{
+            width: 100%;
+            height: 300%;
         }
     </style>
 </head>
@@ -70,8 +74,10 @@
             <div class="form-group">
                 <label for="state">State</label>
                 <input type="text" class="form-control" id="state" name="state" value="{{ interview.state }}" required>
+                <label for="descrp">Description/Mistakes made</label>
+                <textarea type="textarea" class="form-control" id="descrp" name="descrp" >{{ interview.description }}</textarea>
             </div>
-
+           
             <!-- Edit Button -->
             <button type="submit" class="btn-edit">Update Interview</button>
         </form>
@@ -90,6 +96,7 @@
             const company = document.getElementById('companyInput').value;
             const status = document.getElementById('status').value;
             const state = document.getElementById('state').value;
+            const descrp = document.getElementById('descrp').value;
 
             fetch(`/api/edit_interview`, {  // Replace with your API endpoint for editing
                 method: 'PUT',
@@ -102,7 +109,8 @@
                     date: date,
                     company_name: company,
                     status: status,
-                    state: state
+                    state: state,
+                    description:descrp
                 })
             })
             .then(response => response.json())
